snapshots/syntax/library/functions/string/formatpercent/formatpercent_listbox.snap
---
source: vb6parse/src/syntax/library/functions/string/formatpercent.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: lstResults
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: AddItem
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: FormatPercent
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: values
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: i
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: DivisionOperator
          text: /
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: total
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "1"
        - kind: RightParenthesis
          text: )
