snapshots/syntax/library/functions/string/formatpercent/formatpercent_recordset.snap
---
source: vb6parse/src/syntax/library/functions/string/formatpercent.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: FormatPercent
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: rs
        - kind: LeftParenthesis
          text: (
        - kind: StringLiteral
          text: "\"CompletionRate\""
        - kind: RightParenthesis
          text: )
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "0"
        - kind: RightParenthesis
          text: )
